--- a/package.json
+++ b/package.json
@@ -3,12 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "ace-builds": "^1.4.8",
+    "antd": "^4.0.1",
+    "evergreen-ui": "^4.23.0",
+    "monaco-editor": "^0.20.0",
     "react": "^16.13.0",
+    "react-ace": "^8.0.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-github-login": "^1.0.3",
+    "react-google-login": "^5.1.2",
+    "react-monaco-editor": "^0.34.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0",
+    "react-social-login-buttons": "^3.0.0",
+    "slate-editor": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
