--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "evergreen-ui": "^4.23.0",
     "express": "^4.17.1",
     "monaco-editor": "^0.20.0",
+    "node-cache": "^5.1.0",
     "react": "^16.13.0",
     "react-ace": "^8.0.0",
     "react-dom": "^16.13.0",
