--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "ace-builds": "^1.4.8",
     "antd": "^4.0.1",
+    "axios": "^0.19.2",
     "evergreen-ui": "^4.23.0",
     "express": "^4.17.1",
     "monaco-editor": "^0.20.0",
