--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@testing-library/user-event": "^7.1.2",
     "ace-builds": "^1.4.8",
     "antd": "^4.0.1",
+    "body-parser": "^1.19.0",
+    "chalk": "^4.0.0",
     "evergreen-ui": "^4.23.0",
     "express": "^4.17.1",
     "monaco-editor": "^0.20.0",
+    "mongodb": "^3.5.5",
+    "mongoose": "^5.9.7",
     "node-cache": "^5.1.0",
     "react": "^16.13.0",
     "react-ace": "^8.0.0",
