--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "ace-builds": "^1.4.8",
     "antd": "^4.0.1",
     "axios": "^0.19.2",
+    "cors": "^2.8.5",
     "evergreen-ui": "^4.23.0",
     "express": "^4.17.1",
+    "history": "^4.10.1",
     "monaco-editor": "^0.20.0",
     "node-cache": "^5.1.0",
     "react": "^16.13.0",
