--- a/frontent/package.json
+++ b/frontent/package.json
@@ -12,7 +12,7 @@
     "ace-builds": "^1.4.8",
     "antd": "^4.0.1",
     "axios": "^0.19.2",
-    "cors": "^2.8.5",
+    "cors": "^2.8.5",¸
     "evergreen-ui": "^4.23.0",
     "express": "^4.17.1",
     "history": "^4.10.1",
