--- a/frontent/package.json
+++ b/frontent/package.json
@@ -3,39 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@antv/g2plot": "^1.0.1",
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "ace-builds": "^1.4.8",
     "antd": "^4.0.1",
-    "axios": "^0.19.2",
-    "cors": "^2.8.5",
-    "evergreen-ui": "^4.23.0",
-    "express": "^4.17.1",
     "history": "^4.10.1",
     "monaco-editor": "^0.20.0",
-    "mongodb": "^3.5.5",
-    "mongoose": "^5.9.7",
-    "node-cache": "^5.1.0",
     "react": "^16.13.0",
-    "react-ace": "^8.0.0",
     "react-dom": "^16.13.0",
-    "react-github-login": "^1.0.3",
     "react-google-login": "^5.1.2",
     "react-monaco-editor": "^0.34.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-social-login-buttons": "^3.0.0",
-    "recharts": "^1.8.5",
-    "slate-editor": "^5.1.1",
-    "body-parser": "latest"
+    "recharts": "^1.8.5"
   },
   "scripts": {
-    "start": " concurrently  \\\"node backend/server/main.js\\\" \\\"react-scripts start\\\" ",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
