--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.7",
     "node-cache": "^5.1.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "username-generator": "^1.1.0"
   }
 }
