--- a/frontent/package.json
+++ b/frontent/package.json
@@ -8,13 +8,16 @@
     "antd": "^4.0.1",
     "history": "^4.10.1",
     "monaco-editor": "^0.20.0",
+    "prismjs": "^1.20.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-google-login": "^5.1.2",
+    "react-markdown": "^4.3.1",
     "react-monaco-editor": "^0.34.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-simple-code-editor": "^0.11.0",
     "react-social-login-buttons": "^3.0.0",
     "recharts": "^1.8.5"
   },
