--- a/frontent/package.json
+++ b/frontent/package.json
@@ -6,19 +6,23 @@
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
     "antd": "^4.0.1",
+    "expo": "^37.0.7",
     "history": "^4.10.1",
     "monaco-editor": "^0.20.0",
     "prismjs": "^1.20.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-google-login": "^5.1.2",
+    "react-image-resizer": "^1.3.0",
     "react-markdown": "^4.3.1",
     "react-monaco-editor": "^0.34.0",
+    "react-rotating-text": "^1.4.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-simple-code-editor": "^0.11.0",
     "react-social-login-buttons": "^3.0.0",
+    "reactstrap": "^8.4.1",
     "recharts": "^1.8.5"
   },
   "scripts": {
